# app/Http/Controllers/TagController.php
@@ -1,0 +1,70 @@
+<?php
+
+namespace App\Http\Controllers;
+
+use App\Models\Tag;
+use Illuminate\Http\Request;
+
+class TagController extends Controller
+{
+    /**
+     * @OA\Get(
+     *  path="/api/tag",
+     *  operationId="getTags",
+     *  summary="get all active tags",
+     *
+     *  @OA\Response(response="200",
+     * description = "success"
+     *  )
+     * )
+     */
+    public function index()
+    {
+        return Tag::all()->where('active', true);
+    }
+
+    /**
+     * Store a newly created resource in storage.
+     *
+     * @param  \Illuminate\Http\Request  $request
+     * @return \Illuminate\Http\Response
+     */
+    public function store(Request $request)
+    {
+        //
+    }
+
+    /**
+     * Display the specified resource.
+     *
+     * @param  \App\Models\Tags  $tags
+     * @return \Illuminate\Http\Response
+     */
+    public function show(Tags $tags)
+    {
+        //
+    }
+
+    /**
+     * Update the specified resource in storage.
+     *
+     * @param  \Illuminate\Http\Request  $request
+     * @param  \App\Models\Tags  $tags
+     * @return \Illuminate\Http\Response
+     */
+    public function update(Request $request, Tags $tags)
+    {
+        //
+    }
+
+    /**
+     * Remove the specified resource from storage.
+     *
+     * @param  \App\Models\Tags  $tags
+     * @return \Illuminate\Http\Response
+     */
+    public function destroy(Tags $tags)
+    {
+        //
+    }
+}
